deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio
spec:
  replicas: 4
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
        - name: portfolio
          image: rohanmandal798/portfolio:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
